# kindmesh

./: .env.example  .gitignore  .output.txt  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  MANIFEST.in  README.md  docker-compose.yml  fix_app.py  fix_columns.py  fix_duplicate_key.py  fix_syntax_error.py  install_docker.sh  install_singularity.sh  local_setup.sh  local_start.sh  modify_app.py  neo4j.def  pyproject.toml  pytest.ini  questionnaire_questions.md  requirements-dev.txt  requirements.txt  singularity_build.sh  singularity_start.sh  start.sh  stop.sh  test_bcrypt.py  update_app.py
app/: app.py  app_fixed.py  auth.py  batch_entry.py  data_view.py  enhanced_interaction.py  export.py  interaction.py  manage_data.py  password_policy.py  recipient.py  survey.py  user_management.py
app/utils/: graph.py
docs/: backup_recovery.md  database_schema.md  future_roadmap.md  release_process.md  troubleshooting.md
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  kindmesh.rst  kindmesh.utils.rst  modules.rst  usage.rst
kindmesh/: __init__.py  app.py  auth.py  batch_entry.py  data_view.py  enhanced_interaction.py  export.py  interaction.py  manage_data.py  password_policy.py  recipient.py  survey.py  user_management.py
kindmesh/utils/: __init__.py  (+1 more)
notebooks/: neo4j_tutorial.ipynb
project/: roadmap_01.md  roadmap_02.md  roadmap_03.md  roadmap_04.md  roadmap_05.md  roadmap_06.md  roadmap_07.md  roadmap_08.md  roadmap_09.md
scripts/: generate_password_hash.py  temp_generate_hash.py  test_setup.sh
(+8 files in other folders)
